--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,12 @@
 #
 click==6.7                # via pip-tools
 django==2.0.3
+colorama==0.3.9           # via structlog
+dj-database-url==0.5.0
+django-dotenv==1.4.2
 first==2.0.1              # via pip-tools
 pip-tools==1.11.0
+psycopg2-binary==2.7.4
 pytz==2018.3              # via django
-six==1.11.0               # via pip-tools
+six==1.11.0               # via pip-tools, structlog
+structlog[dev]==18.1.0
