Add error reporting

--- a/requirements.in
+++ b/requirements.in
@@ -1,6 +1,7 @@
 dj-database-url
 django
 django-dotenv
+django_slack
 pip-tools
 psycopg2-binary
 structlog[dev]  # the [dev] is for coloured output
