--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,20 @@
 #
 #    pip-compile --output-file requirements.txt requirements.in
 #
+certifi==2018.1.18        # via requests
+chardet==3.0.4            # via requests
 click==6.7                # via pip-tools
-django==2.0.3
 colorama==0.3.9           # via structlog
 dj-database-url==0.5.0
 django-dotenv==1.4.2
+django-slack==5.11.1
+django==2.0.3
 first==2.0.1              # via pip-tools
+idna==2.6                 # via requests
 pip-tools==1.11.0
 psycopg2-binary==2.7.4
 pytz==2018.3              # via django
-six==1.11.0               # via pip-tools, structlog
+requests==2.18.4          # via django-slack
+six==1.11.0               # via django-slack, pip-tools, structlog
 structlog[dev]==18.1.0
+urllib3==1.22             # via requests
