--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ chardet==3.0.4            # via requests
 click==6.7                # via pip-tools
 colorama==0.3.9           # via structlog
 dj-database-url==0.5.0
+django-bootstrap3==9.1.0
 django-dotenv==1.4.2
 django-slack==5.11.1
 django==2.0.3
