--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ certifi==2018.1.18        # via requests
 chardet==3.0.4            # via requests
 click==6.7                # via pip-tools
 colorama==0.3.9           # via structlog
+coverage==4.5.1
 dj-database-url==0.5.0
 django-bootstrap4==0.0.6
 django-dotenv==1.4.2
