--- a/requirements.txt
+++ b/requirements.txt
@@ -15,9 +15,13 @@ django-dotenv==1.4.2
 django-slack==5.11.1
 django==2.0.3
 first==2.0.1              # via pip-tools
+flake8==3.5.0
 idna==2.6                 # via requests
+mccabe==0.6.1             # via flake8
 pip-tools==1.11.0
 psycopg2-binary==2.7.4
+pycodestyle==2.3.1        # via flake8
+pyflakes==1.6.0           # via flake8
 pytz==2018.3              # via django
 requests==2.18.4          # via django-slack, stripe
 six==1.11.0               # via django-slack, pip-tools, structlog
