--- a/requirements.txt
+++ b/requirements.txt
@@ -9,24 +9,35 @@ chardet==3.0.4            # via requests
 click==6.7                # via pip-tools
 colorama==0.3.9           # via structlog
 coverage==4.5.1
+diff-match-patch==20121119  # via django-import-export
 dj-database-url==0.5.0
 django-bootstrap4==0.0.6
 django-dotenv==1.4.2
+django-import-export==1.0.1
 django-slack==5.11.1
 django==2.0.3
+et-xmlfile==1.0.1         # via openpyxl
 first==2.0.1              # via pip-tools
 flake8==3.5.0
 gunicorn==19.7.1
 idna==2.6                 # via requests
+jdcal==1.4                # via openpyxl
 mccabe==0.6.1             # via flake8
+odfpy==1.3.6              # via tablib
+openpyxl==2.5.4           # via tablib
 pip-tools==1.11.0
 psycopg2-binary==2.7.4
 pycodestyle==2.3.1        # via flake8
 pyflakes==1.6.0           # via flake8
 pytz==2018.3              # via django
+pyyaml==4.1               # via tablib
 requests==2.18.4          # via django-slack, stripe
 six==1.11.0               # via django-slack, pip-tools, structlog
 stripe==1.79.1
 structlog[dev]==18.1.0
+tablib==0.12.1            # via django-import-export
+unicodecsv==0.14.1        # via tablib
 urllib3==1.22             # via requests
 whitenoise==3.3.1
+xlrd==1.1.0               # via tablib
+xlwt==1.3.0               # via tablib
