--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ et-xmlfile==1.0.1         # via openpyxl
 first==2.0.1              # via pip-tools
 flake8==3.5.0
 gunicorn==19.7.1
+icalendar==4.0.2
 idna==2.6                 # via requests
 jdcal==1.4                # via openpyxl
 mccabe==0.6.1             # via flake8
@@ -29,10 +30,11 @@ pip-tools==1.11.0
 psycopg2-binary==2.7.4
 pycodestyle==2.3.1        # via flake8
 pyflakes==1.6.0           # via flake8
-pytz==2018.3              # via django
-pyyaml==3.12              # via tablib
+python-dateutil==2.7.3    # via icalendar
+pytz==2018.3              # via django, icalendar
+pyyaml==3.12
 requests==2.18.4          # via django-slack, stripe
-six==1.11.0               # via django-slack, pip-tools, structlog
+six==1.11.0               # via django-slack, pip-tools, python-dateutil, structlog
 stripe==1.79.1
 structlog[dev]==18.1.0
 tablib==0.12.1            # via django-import-export
