--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,8 @@ pip-tools==1.11.0
 psycopg2-binary==2.7.4
 pycodestyle==2.3.1        # via flake8
 pyflakes==1.6.0           # via flake8
+pypng==0.0.18
+pyqrcode==1.2.1
 python-dateutil==2.7.3    # via icalendar
 pytz==2018.3              # via django, icalendar
 pyyaml==3.12
